[package]
name = "format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
num = { git = "https://github.com/or-n/rust-minimalist-utils" }
array = { git = "https://github.com/or-n/rust-minimalist-utils" }
color = { git = "https://github.com/or-n/rust-minimalist-utils" }